﻿[Current]
¯\_(ツ)_/¯


[2021.08.26]
## New Features
Added a scene management panel.
You can now customize the skybox and the floor grid through the inspector.
You can now teleport.
Added a setting to disable teleporting temporarily.
Added a shadow which can be toggled between none, footprints and paws.
Added dust particles.
You can now grip certain objects in edit mode (which is not yet implemented).
Added a new skybox type - "Lights Out".
Added ability to import props in the scene management panel. You are able to transform, rename and delete them. They do not support ruleset bindings yet. Imported props will not be saved yet.

## User Experience
Inspector selections now have an animation.
Made all panels the same size and look.
The handheld menu now only shows the top panel and transitions between with a "popout" animation.
Panels now have tooltips.
Updated the look of this changelog!
Other minor UX changes.
Model loading ( such as controllers ) is now done in the background which reduces load-lag.

## Bugfixes
Fixed a bug where some drawables would render twice (the issue was that they would get loaded before being added to the 3d hierarchy and anything that worked on the hierarchy in the load method would cause this).
Notification panel now doesnt open on startup.
Keyboard is now focused correctly.
Fixed a bug where touch pointers would register collisions where there were none.

## Framework
Models' tint now is multiplied with alpha.
Added ability to fully parse OBJ and MTL files, however not all shader properties are supported.
Added ability to fully parse BLEND files and extract meshes, however no material information can be extracted yet.

## Debugging
The reflections inspector is now avaiable only in debug builds.


[2021.06.03]
## New Features
Implemented saving and loading ruleset bindings.
Ruleset bindings now support rulesets with variants like osu!mania.
Added this changelog!

## User Expreience